--- a/HRichEditorView/src/main/AndroidManifest.xml
+++ b/HRichEditorView/src/main/AndroidManifest.xml
@@ -1,8 +1,18 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hdl">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.hdl.hricheditorview">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name="com.huangdali.view.HRichEditorView" />
+        <activity android:name="com.huangdali.view.TitleEidtorActivity" />
+        <activity android:name="com.huangdali.view.TXTEditorActivity" />
+        <activity android:name="com.huangdali.view.LinkedActivity" />
     </application>
 
 </manifest>
